--- a/turei_process_control/reports/efficient_report.xml
+++ b/turei_process_control/reports/efficient_report.xml
@@ -75,7 +75,7 @@
                                     <b>Frecuencia</b>
                                 </td>
                                 <td>
-                                    <b>Tiempo (min)</b>
+                                    <b>Tiempo (horas)</b>
                                 </td>
                                 <td>
                                     <b>% Frecuencia</b>
@@ -112,11 +112,11 @@
                                     </td>
                                     <td>
                                         <t t-if="line['productive_line']">
-                                            <t t-esc="line['time']"/>
+                                            <t t-esc="line['time']/60.00"/>
                                         </t>
                                         <t t-else="">
                                             <t t-set="count_lines_tmp" t-value="len(model.env['turei_process_control.productive_section'].search([('id', '=', line['productive_section'])]).productive_line_ids)"/>
-                                            <t t-esc="line['time']"/>
+                                            <t t-esc="line['time']/60.00"/>
                                         </t>
                                     </td>
                                     <td>
@@ -137,7 +137,7 @@
                                     <t t-esc="round(sum_frequency_endo, 2)"/>
                                 </td>
                                 <td>
-                                    <t t-esc="sum_time_endo"/>
+                                    <t t-esc="sum_time_endo/60.00"/>
                                 </td>
                                 <td> </td>
                             </tr>
@@ -162,7 +162,7 @@
                                     <b>Frecuencia</b>
                                 </td>
                                 <td>
-                                    <b>Tiempo</b>
+                                    <b>Tiempo (horas)</b>
                                 </td>
                                 <td>
                                     <b>% Frecuencia</b>
@@ -197,11 +197,11 @@
                                     </td>
                                     <td>
                                         <t t-if="line['productive_line']">
-                                            <t t-esc="line['time']"/>
+                                            <t t-esc="line['time']/60.00"/>
                                         </t>
                                         <t t-else="">
                                             <t t-set="count_lines_tmp" t-value="len(model.env['turei_process_control.productive_section'].search([('id', '=', line['productive_section'])]).productive_line_ids)"/>
-                                            <t t-esc="line['time']"/>
+                                            <t t-esc="line['time']/60.00"/>
                                         </t>
                                     </td>
                                     <td>
@@ -222,7 +222,7 @@
                                     <t t-esc="round(sum_frequency_exogena, 2)"/>
                                 </td>
                                 <td>
-                                    <t t-esc="sum_time_exogena"/>
+                                    <t t-esc="sum_time_exogena/60.00"/>
                                 </td>
                                 <td> </td>
                             </tr>
@@ -241,7 +241,9 @@
                                 <td colspan="3" align="left">Eficiencia real (%):</td>
                                 <!--Producción realizada*10000 / (Tiempo Total Planificado) * Capacidad productiva) * 100-->
                                 <td colspan="1">
-                                    <t t-esc="round(((sum_production_done*10000.00) /  productividad_real) * 100.00, 2)"/>
+                                    <t t-if="productividad_real">
+                                        <t t-esc="round(((sum_production_done*10000.00) /  productividad_real) * 100.00, 2)"/>
+                                    </t>
                                 </td>
 
                             </tr>
@@ -251,7 +253,9 @@
                                 <td colspan="3" align="left">Eficiencia operativa (%):</td>
                                 <!-- Producción realizada*10000 / (Tiempo Total Planificado - Tiempo de Interrupciones por causas exógenas) * Capacidad productiva) * 100-->
                                 <td colspan="1">
-                                    <t t-esc="round(((sum_production_done*10000.00) /  productividad_operativa) * 100.00, 2)"/>
+                                    <t t-if="productividad_operativa">
+                                        <t t-esc="round(((sum_production_done*10000.00) /  productividad_operativa) * 100.00, 2)"/>
+                                    </t>
                                 </td>
                             </tr>
                             <tr>
@@ -298,7 +302,9 @@
                             <tr>
                                 <td colspan="4">Tiempo total de interrupciones(horas):</td>
                                 <td colspan="2" align="center">
-                                    <t t-esc="round((sum_time_exogena+sum_time_endo+sum_time_total)/ count_lines / 60.0, 2)"/>
+                                    <t t-if="count_lines">
+                                        <t t-esc="round((sum_time_exogena+sum_time_endo+sum_time_total)/ count_lines / 60.0, 2)"/>
+                                    </t>
                                 </td>
                                 <td colspan="2" align="center">
                                     <t t-if="sum_plan_time > 0">
@@ -319,9 +325,11 @@
                             <tr>
                                 <td colspan="4">Tiempo no justificado(horas):</td>
                                 <!--Tiempo Total Planificado – (Tiempo Real de Producción + Tiempo Total de Interrupciones) / 60 min-->
-                                <td colspan="2" align="center">
-                                    <t t-set="tiempo_no_justificado" t-value="(sum_plan_time - ((real_produccion_time*60.0) + ((sum_time_exogena+sum_time_endo)/ count_lines))) / 60.0"/>
-                                    <t t-esc="round(tiempo_no_justificado, 2)"/>
+                                <td colspan="2" align="center"> 
+                                    <t t-if="count_lines">
+                                        <t t-set="tiempo_no_justificado" t-value="(sum_plan_time - ((real_produccion_time*60.0) + ((sum_time_exogena+sum_time_endo)/ count_lines))) / 60.0"/>
+                                        <t t-esc="round(tiempo_no_justificado, 2)"/>
+                                    </t>
                                 </td>
                                 <td colspan="2" align="center">
                                     <t t-if="sum_plan_time > 0">
