fix: Change from Seccion productiva to Modulo

--- a/turei_process_control/reports/efficiency_accomplish_report.xml
+++ b/turei_process_control/reports/efficiency_accomplish_report.xml
@@ -33,7 +33,7 @@
                     </table>
                     <table class="table table-bordered">
                         <thead>
-                            <th><b>Sección Productiva</b></th>
+                            <th><b>Modulo</b></th>
                             <th><b>Eficiencia real (%)</b></th>
                         </thead>
                         <tbody>
